tests/tlox/eval/snapshots/file_tests__eval__class_instances.lx@self_referential_inner_scope.snap
---
source: tests/eval.rs
description: "{\n    class Foo {\n        another() {\n            return Foo();\n        }\n    }\n\n    print Foo().another(); //> <Foo instance>\n}\n"
expression: combined
---
:: Output ::
<Foo instance>
