tests/tlox/eval/snapshots/file_tests__eval__computed_str_eq.lx.snap
---
source: tests/eval.rs
description: "print \"hey there\" == \"hey \" + \"there\";\n"
expression: combined
---
:: Output ::
true
