tests/tlox/eval/snapshots/file_tests__eval__for_loops.lx@no_init.snap
---
source: tests/eval.rs
description: "var a;\nfor (; a == nil; a = !a) {\n    print a; // nil\n}\nprint a; // true\n\n"
expression: combined
---
:: Output ::
nil
true
