tests/tlox/eval/snapshots/file_tests__eval__for_loops.lx@no_update.snap
---
source: tests/eval.rs
description: "for (var a = 4; a > 0;) {\n    if (a == 4)\n        a = a - 2;\n    else\n        a = a - 1;\n\n    print a; // 2, 1, 0\n}\n\n"
expression: combined
---
:: Output ::
2
1
0
